# dilacar

./: .gitignore  LICENSE  README.md  dict.csv  dilacar.cabal  lokum.cabal  ottoDict.csv  package.yaml  simple.cabal  stack.yaml  turkDict.csv
app/: Main.hs
paper/: Makefile  alphabet.tex  paper.bib  source.tex  thesis.tex
src/: Dictionary.hs  Dilacar.hs  Lib.hs  Lokum.hs  Morphology.hs  Orthography.hs  Ottoman.hs  Pattern.hs  Types.hs
