name:           dilacar
version:        0.1.0.0
description:    Machine translation system from Ottoman Turkish to Modern Turkish.
homepage:       https://github.com/joom/dilacar#readme
bug-reports:    https://github.com/joom/dilacar/issues
author:         Joomy Korkut
maintainer:     joomy@cs.princeton.edu
copyright:      2019 Joomy Korkut
license:        MIT
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10
extra-source-files:
    ottoDict.csv,
    turkDict.csv

source-repository head
  type: git
  location: https://github.com/joom/dilacar

library
  exposed-modules:
      Dilacar
  other-modules:
      Paths_dilacar
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5,
      parsec,
      extra,
      split,
      regex-applicative
  default-language: Haskell2010

executable dilacar-exe
  main-is: Main.hs
  other-modules:
      Paths_dilacar
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , dilacar
  default-language: Haskell2010

test-suite dilacar-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_dilacar
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , simple
  default-language: Haskell2010
