name:           lokum
version:        0.1.0.0
description:    Machine translation system from Ottoman Turkish to Modern Turkish.
homepage:       https://github.com/joom/lokum#readme
bug-reports:    https://github.com/joom/lokum/issues
author:         Joomy Korkut
maintainer:     joomy@cs.princeton.edu
copyright:      2019 Joomy Korkut
license:        MIT
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10
extra-source-files:
    ottoDict.csv,
    turkDict.csv

source-repository head
  type: git
  location: https://github.com/joom/lokum

library
  exposed-modules:
      Lokum
  other-modules:
      Paths_lokum
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5,
      parsec,
      extra,
      split,
      regex-applicative
  default-language: Haskell2010

executable lokum-exe
  main-is: Main.hs
  other-modules:
      Paths_lokum
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , lokum
  default-language: Haskell2010

test-suite lokum-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_lokum
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , simple
  default-language: Haskell2010
